--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -160,10 +160,10 @@
     <li><a href="#contact" class="button-link">Let’s Talk</a></li>
   </ul>
 
-  <img src="/mnt/data/Screen Shot 2025-06-24 at 8.10.13 AM.png" alt="Beach scene" class="hero-image" />
+  <img src="Beach.png" alt="Beach scene" class="hero-image" />
 
   <section class="home-content">
-    <img src="/mnt/data/headshot.png" alt="Ann Leahy Headshot">
+    <img src="headshot.png" alt="Ann Leahy Headshot">
     <div class="text-block">
       <h1>Meet Ann</h1>
       <p>
@@ -173,7 +173,7 @@
   </section>
 
   <footer>
-    <img src="/mnt/data/associate-certified-coach-acc.png" alt="ACC Credential Badge">
+    <img src="acc.png" alt="ACC Credential Badge">
   </footer>
 
   <script>
