--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -94,7 +94,8 @@
 
     .hero-image {
       width: 100%;
-      height: auto;
+      height: 300px;
+      object-fit: cover;
     }
 
     .home-content {
@@ -160,7 +161,7 @@
     <li><a href="#contact" class="button-link">Let’s Talk</a></li>
   </ul>
 
-  <img src="Beach.png" alt="Beach scene" class="hero-image" />
+  <img src="beach.png" alt="Beach scene" class="hero-image" />
 
   <section class="home-content">
     <img src="headshot.png" alt="Ann Leahy Headshot">
