Switch headshot to jpg

--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -164,7 +164,7 @@
   <img src="beach.png" alt="Beach scene" class="hero-image" />
 
   <section class="home-content">
-    <img src="headshot.png" alt="Ann Leahy Headshot">
+    <img src="headshot.jpg" alt="Ann Leahy Headshot">
     <div class="text-block">
       <h1>Meet Ann</h1>
       <p>
