--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ann Leahy Coaching</title>
+  <title>Ann Leahy - executive coach</title>
   <link href="https://fonts.googleapis.com/css2?family=Prata&family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
   <style>
     body {
