--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -174,7 +174,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">Human Kind HRIS</div>
+    <div class="logo">Ann Leahy</div>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#approach">Approach</a></li>
