Add testimonials section

--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -170,6 +170,32 @@
       margin-top: 0;
       color: #0f2e33;
     }
+
+    .testimonials {
+      background-color: #fff;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+
+    .testimonials h2 {
+      font-family: 'Prata', serif;
+      color: #0f2e33;
+      margin-bottom: 2rem;
+    }
+
+    .testimonial {
+      max-width: 600px;
+      margin: 0 auto 2rem;
+      font-style: italic;
+    }
+
+    .testimonial cite {
+      display: block;
+      margin-top: 0.5rem;
+      font-style: normal;
+      color: #0f2e33;
+      font-weight: 500;
+    }
   </style>
 </head>
 <body>
@@ -221,6 +247,18 @@
         <p>Take action and sustain meaningful change.</p>
       </div>
     </div>
+  </section>
+
+  <section id="testimonials" class="testimonials">
+    <h2>Success Stories</h2>
+    <blockquote class="testimonial">
+      “Ann’s coaching transformed our leadership team’s communication.”
+      <cite>— Jane Doe, CEO of Acme Corp</cite>
+    </blockquote>
+    <blockquote class="testimonial">
+      “Working with Ann improved our productivity and morale.”
+      <cite>— John Smith, VP of Operations, Example Inc.</cite>
+    </blockquote>
   </section>
 
   <footer>
