--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Executive coaching for business owners and teams—unlock leadership potential and drive organizational success.">
   <title>Ann Leahy - executive coach</title>
   <link href="https://fonts.googleapis.com/css2?family=Prata&family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
   <style>
