--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -170,6 +170,44 @@
       margin-top: 0;
       color: #0f2e33;
     }
+
+    .contact {
+      background-color: #fff;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+
+    .contact h2 {
+      font-family: 'Prata', serif;
+      color: #0f2e33;
+      margin-bottom: 1rem;
+    }
+
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-family: inherit;
+      font-size: 1rem;
+    }
+
+    .contact-form button {
+      background-color: #5b8296;
+      color: #fff;
+      border: none;
+      padding: 0.75rem;
+      border-radius: 25px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -205,6 +243,8 @@
     </div>
   </section>
 
+
+
   <section id="approach" class="approach">
     <h2>Approach</h2>
     <div class="approach-steps">
@@ -221,6 +261,17 @@
         <p>Take action and sustain meaningful change.</p>
       </div>
     </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="Name" required>
+      <input type="email" placeholder="Email" required>
+      <textarea rows="5" placeholder="Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <p>Prefer the phone? Call 123-456-7890 or email ann@example.com to schedule a consultation.</p>
   </section>
 
   <footer>
