Make header sticky

--- a/ann_leahy_menu.html
+++ b/ann_leahy_menu.html
@@ -23,6 +23,12 @@
       font-family: 'Prata', serif;
     }
 
+    .navbar {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
     .logo {
       font-size: 1.75rem;
       letter-spacing: 1px;
